<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvAcercade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:text="@string/titulo_acerca"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/logo" />

    <TextView
    android:id="@+id/tvAutor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:text="@string/autor"
    android:textAlignment="center" />

    <TextView
        android:id="@+id/tvAnio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/anio"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/version"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btVolver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btVolver"
         />
</LinearLayout>