<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".primary_activity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingTop="20dp">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="371dp"
            android:layout_height="187dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tvAlgunosDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/algunos_datos" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="135dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvEdad"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/edad" />

                <EditText
                    android:id="@+id/etEdad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="number"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvGenero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/genero" />

                <Spinner
                    android:id="@+id/spGenero"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/combo_generos"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvProvincia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/provincia" />

                <Spinner
                    android:id="@+id/spProvincia"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/combo_provincias"
                    android:textAlignment="center" />
            </TableRow>

        </TableLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="123dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTextoLegal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/texto_legal" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btContinuar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btContinuar" />

    </LinearLayout>

</RelativeLayout>